# Poc

./: .gitignore  README.adoc  README.md
01-LinuxCppCallAppWithOut/: RunGitGetOutput.cc
02-GtkmmUI/: MainApplication.cc  MainApplication.h  MainWindow.cc  MainWindow.h  UIMain.cc  build.sh  build_simple.sh
03-QtSimpleApp/: .gitignore
03-QtSimpleApp/02-SimpleApp/: .qmake.stash  02-SimpleApp.pro  Main.cpp
03-QtSimpleApp/03-SimpleAppWithouQtCreator/: Main.cpp  SimpleApp.pro
03-QtSimpleApp/04-SimpleAppSeparateWindow/: Main.cpp  SimpleApp.pro  Window.cpp  Window.h
03-QtSimpleApp/build-01-SimpleButton-Desktop_Qt_5_12_6_MinGW_64_bit-Debug/: .qmake.stash
03-QtSimpleApp/build-01-SimpleButton-Desktop_Qt_6_0_0_MSVC2019_64bit-Debug/: .qmake.stash
04-wxWidgets/Sandbox_wxWidgets/: ReadMe.md  Sandbox_wxWidgets.sln
05-MFC/PocMFC/: PocMFC.sln
06-WinFormCpp/PocWinFormCpp/: PocWinFormCpp.sln
07-PocWpfCpp/: PocWpfCpp.sln
07-PocWpfCpp/PocWpfCpp/: MainWindow.cpp  MainWindow.h  PocWpfCpp.vcxproj  PocWpfCpp.vcxproj.filters  PocWpfCppAppcpp.cpp
08-PocOfficeInteropCppCli/src/: PocOfficeInteropCppCli.sln
08-PocOfficeInteropCppCli/wrk/: TestWorkbook.xlsx  TestWorkbook1.xlsx
11-PocCSharpSqlLite/doc/: PocCSharpSqlLite.docx
20-PocNodeJs/src/: 01-Script.js
21-PocPython/src/: OutlookRecursiveFolderSearch.py  TkinterExample.py
23-PocWinFormNetCoreCSharp/PocWindowsFormCSharp/: PocWindowsFormCSharp.sln
25-PocJavaSwing/doc/: PocJavaSwing.adoc
29_PocCmakeCpp/src/PocCmakeCpp/PocCmakeCpp/: CMakeLists.txt  PocCmakeCpp.cpp  PocCmakeCpp.h
doc/: PocDocumentation.adoc
(+206 files in other folders)
